# Unibots_UCL_TeamDylan

./: .gitignore  README.md  Useful_Links
Testing_Code/STM32_MicroROS_Motor/: STM32_MicroROS_Motor.ino  jetson_serial_bridge.py
Testing_Code/STM32_Motor_Test/: STM32_Motor_Test.ino
Testing_Code/STM32_UART/: STM32_UART.ino
Testing_Code/STM32_test/: STM32_test.ino
Testing_Code/Sensors/: Ball_detection.py  Dockerfile  IMU.py  export_engine.py
unibots_ws/: fix_shebangs.sh
unibots_ws/src/april_tag_detector/: package.xml  setup.cfg  setup.py
unibots_ws/src/april_tag_detector/april_tag_detector/: april_tag_detector.py
unibots_ws/src/ball_detector/: package.xml  setup.py
unibots_ws/src/ball_detector/ball_detector/: ball_detector.py
unibots_ws/src/decision_maker/: package.xml  setup.py
unibots_ws/src/decision_maker/decision_maker/: decision_maker.py
unibots_ws/src/image_sender/: package.xml  setup.py
unibots_ws/src/image_sender/image_sender/: image_sender.py
unibots_ws/src/imu/: package.xml  setup.py
unibots_ws/src/imu/imu/: imu_data.py
unibots_ws/src/lidar/: package.xml  setup.py
unibots_ws/src/lidar/lidar/: stl27l.py
