<?xml version="1.0"?>
<package format="3">
  <name>decision_maker</name>
  <version>0.0.0</version>
  <description>Central decision maker for Unibots 2026</description>
  <maintainer email="ksmxkaicsoc@gmail.com">jetson</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
